--- a/requirements.txt
+++ b/requirements.txt
@@ -22,13 +22,13 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 license-expression==30.4.3
-lxml==6.0.0
+lxml==6.0.1
 lxml_html_clean==0.4.2
 Mako==1.3.10
 markdown-it-py==3.0.0
-mistune
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mistune==3.1.4
 msgpack==1.1.1
 packageurl-python==0.17.1
 packaging==25.0
@@ -41,12 +41,14 @@ platformdirs==4.3.8
 py-serializable==2.0.0
 Pygments==2.19.2
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 PyYAML==6.0.2
 requests==2.32.4
 rich==14.0.0
 scout==3.0.3
 setuptools==80.9.0
+six==1.17.0
 sortedcontainers==2.4.0
 soupsieve==2.7
 SQLAlchemy==2.0.41
@@ -55,4 +57,6 @@ toml==0.10.2
 typing_extensions==4.14.1
 urllib3==2.5.0
 Werkzeug==3.1.3
+wheel==0.45.1
+Whoosh==2.7.4
 WTForms==3.2.1
