chore: Excluir documentación personal (.md) excepto README.md
- Documentación de guías y optimizaciones mantenida solo localmente
- Preserva README.md para documentación pública del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,7 @@ key.pem
 
 # Directorio de índice Whoosh (no versionar)
 whoosh_index/
+
+# Documentación personal - excluir archivos .md excepto README.md
+*.md
+!README.md
