--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ dependencies = [
     "typing-extensions==4.14.1",
     "urllib3>=2.6.3",
     "Werkzeug>=3.1.5",
-    "wheel==0.45.1",
+    "wheel>=0.46.3",
     "Whoosh==2.7.4",
     "WTForms==3.2.1",
     "ruff>=0.14.11",
