--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "defusedxml==0.7.1",
     "docker==7.1.0",
     "filelock>=3.20.3",
-    "Flask==3.1.1",
+    "flask>=3.1.3",
     "Flask-Migrate==4.1.0",
     "Flask-SQLAlchemy==3.1.1",
     "flask-talisman==1.1.0",
@@ -70,6 +70,7 @@ dependencies = [
     "WTForms==3.2.1",
     "ruff>=0.14.11",
     "pre-commit>=4.5.1",
+    "pip>=26.0.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
